# dde-appearance

./: .gitignore  CMakeLists.txt  README.md
.reuse/: dep5
.tx/: config
DBus/: org.deepin.daemon.Appearance1.xml
DBus/types/: scaleFactors.cpp  scaleFactors.h
dbus/: com.deepin.wm.xml  org.deepin.daemon.Appearance1.xml  org.deepin.dde.Appearance1.xml
debian/: changelog  control  copyright  dde-appearance.substvars  files  lintian-overrides  rules
debian/dde-appearance/DEBIAN/: control  md5sums
debian/dde-appearance/usr/lib/systemd/user/: org.deepin.daemon.appearance.service
debian/dde-appearance/usr/share/dsg/configs/dde-appearance/: org.deepin.dde.appearance1.json
fakewm/: CMakeLists.txt  main.cpp
fakewm/dbus/: deepinwmfaker.cpp  deepinwmfaker.h
misc/: CMakeLists.txt
misc/data/: CMakeLists.txt
misc/dbusservice/: CMakeLists.txt  com.deepin.wm.service  com.deepin.wm.service.in  org.deepin.daemon.Appearance1.service  org.deepin.dde.Appearance1.service  org.deepin.dde.Appearance1.service.in
misc/dconfig/: CMakeLists.txt  org.deepin.daemon.appearance1.dconfig.json  org.deepin.dde.appearance.json  org.deepin.dde.appearance1.json
misc/systemd/: CMakeLists.txt  dde-appearance.service  dde-appearance.service.in  dde-fakewm.service.in  org.deepin.daemon.appearance1.service
misc/translations/: CMakeLists.txt  lupdate.sh  translate_generation.sh
misc/translations/translations/: dde-appearance_ady.ts  dde-appearance_af.ts  dde-appearance_ak.ts  dde-appearance_am_ET.ts  dde-appearance_ar.ts  dde-appearance_ar_EG.ts  dde-appearance_ast.ts  dde-appearance_az.ts  dde-appearance_bg.ts  dde-appearance_bn.ts  dde-appearance_bo.ts  dde-appearance_br.ts  dde-appearance_ca.ts  dde-appearance_cgg.ts  dde-appearance_cs.ts  dde-appearance_da.ts  dde-appearance_de.ts  dde-appearance_de_CH.ts  dde-appearance_el.ts  dde-appearance_en.ts  dde-appearance_en_AU.ts  dde-appearance_en_GB.ts  dde-appearance_en_US.ts  dde-appearance_eo.ts  dde-appearance_es.ts  dde-appearance_es_MX.ts  dde-appearance_et.ts  dde-appearance_eu.ts  dde-appearance_fa.ts  dde-appearance_fi.ts  dde-appearance_fil.ts  dde-appearance_fr.ts  dde-appearance_gl_ES.ts  dde-appearance_he.ts  dde-appearance_hi_IN.ts  dde-appearance_hr.ts  dde-appearance_hu.ts  dde-appearance_hy.ts  dde-appearance_id.ts  dde-appearance_it.ts  (+51 more)
misc/wallpaper/: CMakeLists.txt  config.json
src/: CMakeLists.txt
src/service/: CMakeLists.txt  main.cpp  plugin-dde-appearance.json  plugin.cpp
src/service/dbus/: appearance1.cpp  appearance1.h  appearance1adaptor.cpp  appearance1adaptor.h  appearance1thread.cpp  appearance1thread.h  appearancedbusproxy.cpp  appearancedbusproxy.h  appearanceproperty.cpp  appearanceproperty.h  dccdbusinterface.cpp  dccdbusinterface.h  dccdbusinterface_p.h  deepinwmfaker.cpp  deepinwmfaker.h
src/service/impl/: appearance1.cpp  appearance1.h  appearancemanager.cpp  appearancemanager.h  appearancesyncconfig.cpp  appearancesyncconfig.h  cursorchangehandler.cpp  cursorchangehandler.h  fsnotify.cpp  fsnotify.h  wallpaperscheduler.cpp  wallpaperscheduler.h
src/service/modules/api/: compatibleengine.cpp  compatibleengine.h  dfile.cpp  dfile.h  keyfile.cpp  keyfile.h  locale.cpp  locale.h  qt_cursor.c  sunrisesunset.cpp  sunrisesunset.h  syncconfig.cpp  syncconfig.h  themes.cpp  themes.h  themethumb.cpp  themethumb.h  utils.cpp  utils.h
src/service/modules/background/: background.cpp  background.h  backgrounds.cpp  backgrounds.h  format.cpp  format.h
src/service/modules/common/: commondefine.h
src/service/modules/dconfig/: dconfigsettings.cpp  dconfigsettings.h  phasewallpaper.cpp  phasewallpaper.h
src/service/modules/fonts/: fontsmanager.cpp  fontsmanager.h
src/service/modules/lib/: dfile.cpp  dfile.h
src/service/modules/subthemes/: customtheme.cpp  customtheme.h  scanner.cpp  scanner.h  subthemes.cpp  subthemes.h  theme.cpp  theme.h
toolGenerate/dconfig2cpp/: org_deepin_dde_appearance.hpp
toolGenerate/qdbusxml2cpp/: com.deepin.wmAdaptor.cpp  com.deepin.wmAdaptor.h  org.deepin.dde.Appearance1Adaptor.cpp  org.deepin.dde.Appearance1Adaptor.h
